# anti-fraud-multi-agent

./: .gitignore  README.md  dataset.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture-future.md  infra-docker-plan.md  merchant-agent.md
docs/diagrams/: architecture.drawio
src/anti_fraud/agents/: base.py
src/anti_fraud/agents/merchant/: __init__.py  agent.py  config.py  rules.py
src/anti_fraud/models/: agent_result.py  transaction.py
tests/agents/merchant/: test_agent.py  test_rules.py
